[package]
name = "graphus-kg-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic, seeded knowledge-graph generator + analytically-known reference subgraph for the knowledge-graph-rest example (dev-only leaf crate)."
# UNPUBLISHED dev/example leaf crate, in the same spirit as `graphus-fraud-gen`, `graphus-gds-gen`,
# `graphus-bulk-gen`, `graphus-examples-harness` and `graphus-bench`: it exists only to support the
# `examples/knowledge-graph-rest` E2E demonstration and is depended upon by NOTHING in the production
# build. In particular, `graphus-server` MUST NOT depend on it, so it adds ZERO overhead to the
# shipped binary.
publish = false

[lib]
name = "graphus_kg_gen"
path = "src/lib.rs"

[dependencies]
# The generator emits the reference ground-truth as JSON and the Cypher load script as text; serde
# pins match the rest of the workspace. Hermetic: serde only, no engine, no network — always
# available and CI-runnable.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The shared evidence harness, for the `baseline_cmp` binary: it loads a committed baseline report +
# a fresh run's report and runs `compare_to_baseline` (the regression gate the example invokes). A
# dev-only leaf crate (never in `graphus-server`), so this keeps the production build untouched. Its
# only deps are serde + the stdlib, so the generator + its determinism test stay light.
graphus-examples-harness = { path = "../graphus-examples-harness" }

# The deterministic generator binary: writes `graph.cypher` + `reference.json` for a profile.
# Usage: `cargo run -p graphus-kg-gen --bin kg_gen -- --profile fast --out-dir <dir>`
[[bin]]
name = "kg_gen"
path = "src/bin/kg_gen.rs"

# The baseline regression gate: compares a fresh evidence report against the committed baseline using
# the STABLE structural metrics (storage bytes/pages, dataset size, EXACT payload bytes per encoding +
# CBOR/JSON ratio) and ignoring the machine-variant families (throughput/latency/CPU/RSS). Hermetic —
# needs only the harness, no engine, so it is always available.
# Named `kg_baseline_cmp` (NOT `baseline_cmp`) to avoid a target/<profile>/baseline_cmp binary-name
# collision with `graphus-fraud-gen`'s own `baseline_cmp` — both leaf crates ship a comparator.
# Usage: `cargo run -p graphus-kg-gen --bin kg_baseline_cmp -- <baseline.json> <candidate.json>`
[[bin]]
name = "kg_baseline_cmp"
path = "src/bin/kg_baseline_cmp.rs"
