[package]
name = "graphus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Graphus server process: listener wiring, admission control and observability."

[[bin]]
name = "graphus-server"
path = "src/main.rs"

[dependencies]
# The shared value model, error taxonomy and the injected `Clock` capability (used to drive REST
# transaction expiry and JWT validity deterministically). `04 §7.2`, `§8.4`.
graphus-core = { path = "../graphus-core" }
# The single-threaded query engine: `TxnCoordinator` + the `execute` pipeline run on the engine
# thread behind the command channel (`04 §9.1`, `§1.3`).
graphus-cypher = { path = "../graphus-cypher" }
# The persistent record store the engine owns; opened/recovered and integrity-checked at startup
# (`04 §4.6`, `§4.8`).
graphus-storage = { path = "../graphus-storage" }
# The WAL manager + sinks (the durability substrate the store commits through) and recovery.
graphus-wal = { path = "../graphus-wal" }
# The SSI isolation level the engine begins transactions at (`04 §5.4`). `TxnCoordinator` is generic
# over the storage device + log sink; this names the `IsolationLevel` enum it begins with. Acyclic:
# graphus-txn depends only on core.
graphus-txn = { path = "../graphus-txn" }
# Async listeners (`TcpAcceptor`/`UdsAcceptor` + `SO_PEERCRED`), the dedicated `FsyncPool`
# durability offload, the block devices, and io_uring backend selection (`04 §8.1`, `§9.1`).
graphus-io = { path = "../graphus-io" }
# The transport-agnostic Bolt 5.4 core: the server adapts its async socket onto the `Transport`
# seam and drives `BoltSession::run` (`04 §8.1`).
graphus-bolt = { path = "../graphus-bolt" }
# The transactional HTTP API: the server builds the axum `Router` over the engine-backed
# `RestEngine` and mounts the admin/observability routes alongside it (`04 §8.2`).
graphus-rest = { path = "../graphus-rest" }
# The shared RBAC/auth core: every listener resolves identities to one `Authenticator`, and the TLS
# 1.3 `ServerConfig` for the network listeners is built here (`04 §8.4`).
graphus-auth = { path = "../graphus-auth" }
# Encryption at rest (rmp #85): the keyring + AES-256-GCM `EncryptedFileDevice` the store is built on
# when `encryption.key_path` is configured. Absent that config, the plaintext `FileBlockDevice` path
# is byte-identical to today.
graphus-crypto = { path = "../graphus-crypto" }

# The async runtime. `full` is intentional: the server is the top-level binary that drives every
# Tokio facility (multi-thread runtime, net, time, signal, sync, macros). The library crates keep a
# tight feature set; the binary is the one place the whole runtime is legitimately needed (`04 §9.1`).
tokio = { version = "1", features = ["full"] }

# TLS termination for the Bolt-TCP and REST listeners: wraps an accepted `TcpStream` in a rustls
# 0.23 server session. tokio-rustls 0.26 tracks rustls 0.23 (the version `graphus-auth` builds the
# `ServerConfig` with), so no second rustls version enters the graph (`04 §8.4`).
tokio-rustls = { version = "0.26", default-features = false }
# The rustls `ServerConfig` type the server reads from `graphus-auth` and hands to tokio-rustls. Same
# 0.23 line + default `aws_lc_rs` provider as `graphus-auth`, so exactly one rustls enters the build.
rustls = "0.23"

# axum/hyper for serving the REST router over the accepted (optionally TLS-wrapped) TCP stream. Same
# major versions `graphus-rest` already pins, so no duplicate trees. `tower::Service` is needed to
# call the router per connection over a hyper connection.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "json"] }
hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }

# Structured logging + the slow-query log (`04 §9` / NFR-10). `env-filter` honours `RUST_LOG`;
# `fmt` is the structured text subscriber.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "ansi"] }

# Config file parsing (`config` module). `serde` derives `ServerConfig`; `toml` is the small, vetted
# file format. Env overrides are read directly from `std::env` (no extra crate). int handling is
# native (no JS boundary here, unlike the REST wire codec).
serde = { version = "1", features = ["derive"] }
toml = "0.9"
# Hold the loaded master key (encryption at rest, rmp #85) in zeroizing memory so it is wiped on
# drop. Same crate (and version line) `graphus-crypto` uses for its keyring.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
# In-test self-signed certificate generation for the TLS listener paths (`04 §8.4`; same crate
# `graphus-auth` uses for its TLS test). 0.14 tracks rustls 0.23's cert/key DER types.
rcgen = "0.14"
# The Bolt codec (handshake, framing, PackStream, messages) to drive a real Bolt session end-to-end
# over a loopback socket from the integration test.
graphus-bolt = { path = "../graphus-bolt" }
