[package]
name = "graphus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Graphus server process: listener wiring, admission control and observability."

[[bin]]
name = "graphus-server"
path = "src/main.rs"

[features]
# Opt-in interoperability test against the OFFICIAL Neo4j JavaScript driver (rmp #226). OFF by
# default so `cargo test` stays hermetic (no Node/npm/network). The `neo4j_driver_interop` test
# target is gated on this feature; CI runs it explicitly with `--features neo4j-interop`.
neo4j-interop = []

# Deterministic Simulation Testing seam (rmp #236): forwards to `graphus-cypher/dst` (which forwards
# to `graphus-storage/dst`) so `LocalEngine::device_mut` exists, letting the VOPR harness arm live
# disk faults on the running engine's store mid-workload. OFF by default — the production server build
# never compiles the seam, so the device stays encapsulated and the cost is exactly zero.
dst = ["graphus-cypher/dst"]

[dependencies]
# The shared value model, error taxonomy and the injected `Clock` capability (used to drive REST
# transaction expiry and JWT validity deterministically). `04 §7.2`, `§8.4`.
graphus-core = { path = "../graphus-core" }
# The single-threaded query engine: `TxnCoordinator` + the `execute` pipeline run on the engine
# thread behind the command channel (`04 §9.1`, `§1.3`).
graphus-cypher = { path = "../graphus-cypher" }
# The persistent record store the engine owns; opened/recovered and integrity-checked at startup
# (`04 §4.6`, `§4.8`).
graphus-storage = { path = "../graphus-storage" }
# The WAL manager + sinks (the durability substrate the store commits through) and recovery.
graphus-wal = { path = "../graphus-wal" }
# The SSI isolation level the engine begins transactions at (`04 §5.4`). `TxnCoordinator` is generic
# over the storage device + log sink; this names the `IsolationLevel` enum it begins with. Acyclic:
# graphus-txn depends only on core.
graphus-txn = { path = "../graphus-txn" }
# Async listeners (`TcpAcceptor`/`UdsAcceptor` + `SO_PEERCRED`), the dedicated `FsyncPool`
# durability offload, the block devices, and io_uring backend selection (`04 §8.1`, `§9.1`).
graphus-io = { path = "../graphus-io" }
# The transport-agnostic Bolt 5.4 core: the server adapts its async socket onto the `Transport`
# seam and drives `BoltSession::run` (`04 §8.1`).
graphus-bolt = { path = "../graphus-bolt" }
# The transactional HTTP API: the server builds the axum `Router` over the engine-backed
# `RestEngine` and mounts the admin/observability routes alongside it (`04 §8.2`).
graphus-rest = { path = "../graphus-rest" }
# The shared RBAC/auth core: every listener resolves identities to one `Authenticator`, and the TLS
# 1.3 `ServerConfig` for the network listeners is built here (`04 §8.4`).
graphus-auth = { path = "../graphus-auth" }
# Encryption at rest (rmp #85): the keyring + AES-256-GCM `EncryptedFileDevice` the store is built on
# when `encryption.key_path` is configured. Absent that config, the plaintext `FileBlockDevice` path
# is byte-identical to today.
graphus-crypto = { path = "../graphus-crypto" }

# The async runtime. `full` is intentional: the server is the top-level binary that drives every
# Tokio facility (multi-thread runtime, net, time, signal, sync, macros). The library crates keep a
# tight feature set; the binary is the one place the whole runtime is legitimately needed (`04 §9.1`).
tokio = { version = "1", features = ["full"] }

# TLS termination for the Bolt-TCP and REST listeners: wraps an accepted `TcpStream` in a rustls
# 0.23 server session. tokio-rustls 0.26 tracks rustls 0.23 (the version `graphus-auth` builds the
# `ServerConfig` with), so no second rustls version enters the graph (`04 §8.4`).
tokio-rustls = { version = "0.26", default-features = false }
# The rustls `ServerConfig` type the server reads from `graphus-auth` and hands to tokio-rustls. Same
# 0.23 line + default `aws_lc_rs` provider as `graphus-auth`, so exactly one rustls enters the build.
rustls = "0.23"

# axum/hyper for serving the REST router over the accepted (optionally TLS-wrapped) TCP stream. Same
# major versions `graphus-rest` already pins, so no duplicate trees. `tower::Service` is needed to
# call the router per connection over a hyper connection.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "json"] }
hyper = { version = "1", default-features = false, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }

# Structured logging + the slow-query log (`04 §9` / NFR-10). `env-filter` honours `RUST_LOG`;
# `fmt` is the structured text subscriber.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "ansi"] }

# Config file parsing (`config` module). `serde` derives `ServerConfig`; `toml` is the small, vetted
# file format. Env overrides are read directly from `std::env` (no extra crate). int handling is
# native (no JS boundary here, unlike the REST wire codec).
serde = { version = "1", features = ["derive"] }
# The audit log (rmp #70) serialises each event as one compact JSON object per line (JSONL) and
# scans existing lines on reopen to recover the sequence counter + detect a torn tail. Same version
# line `graphus-rest` already pins, so no duplicate tree enters the build.
serde_json = "1"
toml = "0.9"
# Hold the loaded master key (encryption at rest, rmp #85) in zeroizing memory so it is wiped on
# drop. Same crate (and version line) `graphus-crypto` uses for its keyring.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
# In-test self-signed certificate generation for the TLS listener paths (`04 §8.4`; same crate
# `graphus-auth` uses for its TLS test). 0.14 tracks rustls 0.23's cert/key DER types.
rcgen = "0.14"
# The Bolt codec (handshake, framing, PackStream, messages) to drive a real Bolt session end-to-end
# over a loopback socket from the integration test.
graphus-bolt = { path = "../graphus-bolt" }
# The synchronous Bolt/UDS client (the same one the `graphus-cli` binary uses) so the MVP
# end-to-end test can drive a real, separately-spawned `graphus-server` process over a UDS exactly
# as an external client would. graphus-cli's normal deps are only graphus-core + graphus-bolt, so
# this introduces no dependency cycle.
graphus-cli = { path = "../graphus-cli" }
# The deterministic capability substrate (SimClock/SimRng) so the inline `LocalEngine` tests
# (`engine::local`) can drive the real engine over a simulated clock — the DST foundation (rmp #160).
graphus-sim = { path = "../graphus-sim" }
# The dev-only evidence-collection harness, so the MVP end-to-end test (the cargo mirror of
# `examples/social-network-uds`) ALSO demonstrates standardized evidence collection: it meters the
# real server process it spawns (CPU/RSS) and the on-disk store/WAL footprint, then emits a
# report.json + report.md (rmp #249). This is a TEST-TARGET dev-dependency only — it never enters the
# `graphus-server` production build (verified via `cargo tree`).
graphus-examples-harness = { path = "../graphus-examples-harness" }
# The deterministic fraud-graph generator (default features = serde-only generator; the heavy
# `dst-repro` engine feature is NOT enabled here), so the hermetic fraud-oltp cargo mirror
# (`tests/fraud_oltp_detection.rs`) can generate the SAME seeded graph + ground truth the shell demo
# uses and assert the detection queries find exactly the planted fraud — fully in-process via
# `LocalEngine`, no Node/network. fraud-gen's normal deps are serde + the evidence harness only, and
# its dependency on `graphus-server` is OPTIONAL (behind `dst-repro`), so this introduces no cycle in
# the normal build graph; it is a TEST-TARGET dev-dependency that never enters the production build.
graphus-fraud-gen = { path = "../graphus-fraud-gen" }
# The deterministic influence/citation-network generator (its only non-serde dep is the
# zero-runtime-dependency `graphus-gds` leaf crate, used by the `gds_sweep` binary — NOT by the lib),
# so the hermetic gds-analytics cargo mirror (`tests/gds_analytics.rs`) can generate the SAME seeded
# graph + reference subgraph the shell demo uses and assert the `gds.*` algorithm outputs against the
# analytically-known ground truth — fully in-process via `LocalEngine`, no Node/network. gds-gen does
# NOT depend on `graphus-server`, so this introduces no cycle; it is a TEST-TARGET dev-dependency that
# never enters the production build.
graphus-gds-gen = { path = "../graphus-gds-gen" }
# The deterministic knowledge-graph generator (default features = serde-only generator; its only
# deps are serde + the evidence harness), so the hermetic knowledge-graph-rest cargo mirror
# (`tests/knowledge_graph_rest.rs`) can generate the SAME seeded graph + analytically-known reference
# the shell demo uses and assert the discovery answers + NDJSON/CBOR negotiation through the REAL
# REST router — fully in-process via `tower::oneshot`, no python/network. kg-gen does NOT depend on
# `graphus-server`, so this introduces no cycle; it is a TEST-TARGET dev-dependency that never enters
# the production build.
graphus-kg-gen = { path = "../graphus-kg-gen" }
# The deterministic multi-tenant security generator (DEFAULT features = serde-only generator: the
# `dataset`/`manifest` + the allow/deny matrix; its only deps are serde + the evidence harness), so
# the hermetic security-multitenant cargo mirror (`tests/security_multitenant.rs`) can drive the
# SAME seeded tenants/roles/users/grants + RBAC matrix the shell demo uses through the REAL REST
# router — fully in-process via `tower::oneshot`, no python/Node/network. The `dst-repro` feature
# (which DOES depend on `graphus-server`) is deliberately NOT enabled here: enabling it would form a
# dependency cycle. The mirror's encryption/rotation/backup leg instead drives the SAME crypto stack
# (`graphus-crypto` + `graphus-storage` + `key_rotation::rotate_master_key`) directly — all already
# direct deps of `graphus-server` — so the serde-only generator is all this dev-dep contributes and
# no cycle is introduced. TEST-TARGET dev-dependency only; never enters the production build.
graphus-security-gen = { path = "../graphus-security-gen" }
# The HTTP request/response types + body collector to drive the REST `axum::Router` via
# `tower::ServiceExt::oneshot` in the hermetic mirror (the same no-socket pattern `graphus-rest`'s
# own router tests use). `http`/`http-body-util` track the `1`/`0.1` lines `graphus-rest` already
# pins, so no duplicate trees enter the build.
http = "1"
http-body-util = "0.1"
# The CBOR codec (RFC 8949) so the mirror can decode the `application/cbor` response body and assert
# it is logically identical to the JSON body — the content-negotiation proof. Same `0.2` line
# `graphus-rest` pins.
ciborium = "0.2"
