[package]
name = "graphus-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic and production capability implementations and fault-injection hooks for Graphus DST."

[dependencies]
graphus-core = { path = "../graphus-core" }
# The Bolt `Transport` trait, so the simulated network's endpoints (`net::SimEndpoint`) can be handed
# directly to a real `BoltSession` over an in-memory, deterministic byte pipe (rmp #161). graphus-bolt
# depends only on graphus-core + graphus-auth, so this introduces no dependency cycle.
graphus-bolt = { path = "../graphus-bolt" }
