[package]
name = "graphus-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Record store with index-free adjacency, tokens and element-ID mapping for Graphus."

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-io = { path = "../graphus-io" }
graphus-bufpool = { path = "../graphus-bufpool" }
graphus-wal = { path = "../graphus-wal" }
# The consistency checker (src/check.rs) verifies store/index agreement, so it needs the index
# types. This edge is acyclic: graphus-index depends on core/io/bufpool/wal, never on storage.
graphus-index = { path = "../graphus-index" }
# CRC32C for the whole-payload backup digest (src/backup.rs); same crate/version the page header
# already uses in graphus-bufpool, so no new transitive dependency enters the workspace.
crc32c = "0.6"

[dev-dependencies]
graphus-sim = { path = "../graphus-sim" }
