[package]
name = "graphus-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Record store with index-free adjacency, tokens and element-ID mapping for Graphus."

[features]
# Deterministic Simulation Testing seam (`04 §11`): exposes `RecordStore::device_mut`, letting a DST
# harness reach the live block device of a running store to arm a fault model (I/O error, bit-rot,
# torn write, ...) mid-workload. Forwards to `graphus-bufpool/dst`. OFF by default, so the production
# build never compiles the seam and the device stays encapsulated.
dst = ["graphus-bufpool/dst"]

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-io = { path = "../graphus-io" }
graphus-bufpool = { path = "../graphus-bufpool" }
graphus-wal = { path = "../graphus-wal" }
# The consistency checker (src/check.rs) verifies store/index agreement, so it needs the index
# types. This edge is acyclic: graphus-index depends on core/io/bufpool/wal, never on storage.
graphus-index = { path = "../graphus-index" }
# The Active/Recent Transaction Table (`CommitRegistry`) the record store owns for lazy GC-time
# header freezing (`rmp` task #49). Acyclic: graphus-txn depends only on graphus-core, never on
# storage.
graphus-txn = { path = "../graphus-txn" }
# CRC32C for the whole-payload backup digest (src/backup.rs); same crate/version the page header
# already uses in graphus-bufpool, so no new transitive dependency enters the workspace.
crc32c = "0.6"

[dev-dependencies]
graphus-sim = { path = "../graphus-sim" }
# Property-based round-trip invariants for the value/property codecs (`tests/proptest_codecs.rs`,
# `rmp` task #27). `default-features = false` + only `std` keeps the test-time dependency tree
# minimal (no fork/timeout/tempfile), matching the pin already used by `graphus-bolt`.
proptest = { version = "1", default-features = false, features = ["std"] }
